# NeuralNetwork

./: .gitignore  CMakeLists.txt  CMakeSettings.json  NeuralNetwork.sln  README.md  evalNN.vcxproj  trainBPN.vcxproj
EvalNN/: evalNN.vcxproj  evalNN.vcxproj.filters
TrainBPN/: trainBPN.vcxproj  trainBPN.vcxproj.filters
examples/: README.md
resources/: config.txt
src/: ActivationFunctions.cpp  ActivationFunctions.h  DataReader.cpp  DataReader.h  Matrix.cpp  Matrix.h  NeuralNetwork.cpp  NeuralNetwork.h  NeuralNetworkTrainer.cpp  NeuralNetworkTrainer.h  StopFileWatcher.h  StopWatcher.cpp  StopWatcher.h  cmdParser.h  configFileParser.h  evalNN.cpp  main.cpp  trainBPN.cpp  vectorstream.h
